codegen/ui_tests/export_mod_bad_attr.stderr
error: unknown attribute 'unknown'
  --> ui_tests/export_mod_bad_attr.rs:11:11
   |
11 | #[rhai_fn(unknown = "thing")]
   |           ^^^^^^^
